--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
     "mysql2": "^1.2.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "pug": "~2.0.0-beta11",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2"
