--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "start": "node ./dist/server.js"
   },
   "dependencies": {
-    "@types/body-parser": "^1.16.3",
-    "@types/cookie-parser": "^1.3.30",
-    "@types/morgan": "^1.7.32",
-    "@types/sequelize": "^4.0.52",
-    "@types/serve-favicon": "^2.2.28",
-    "@types/lodash": "ts2.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.2.0",
@@ -29,6 +23,12 @@
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.33",
     "@types/node": "^6.0.46",
+    "@types/body-parser": "^1.16.3",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/morgan": "^1.7.32",
+    "@types/sequelize": "^4.0.52",
+    "@types/serve-favicon": "^2.2.28",
+    "@types/lodash": "4.14.64",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.1",
     "typescript": "^2.0.6"
