--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "node bin/www",
     "postinstall": "gulp scripts"
   },
   "dependencies": {
@@ -12,15 +12,11 @@
     "debug": "^2.2.0",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "mysql": "^2.13.0",
-    "mysql2": "^1.2.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "pug": "~2.0.0-beta11",
     "sequelize": "^3.30.4",
-    "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {
+    "serve-favicon": "~2.4.2",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.33",
     "@types/node": "^6.0.46",
@@ -32,6 +28,9 @@
     "@types/lodash": "4.14.64",
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.1",
-    "typescript": "^2.0.6"
+    "typescript": "^2.3.2"
+  },
+  "devDependencies": {
+
   }
 }
