--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node bin/www",
-        "postinstall": "gulp scripts"
+        "postinstall": "gulp scripts",
+        "start": "node bin/www"
     },
     "dependencies": {
         "body-parser": "~1.17.1",
